# neato_robot

./: bringup_neato.sh  neato.rviz
neato_slam/: CMakeLists.txt  package.xml
neato_slam/launch/: bringup.launch  move_base.launch  slam.launch  teleop.launch
neato_slam/params/: local_costmap_params.yaml
neato_urdf/: CMakeLists.txt  neato_xv11.urdf  package.xml
neato_urdf/meshes/: R8robotModel.dae
